Fixed spacing

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -26,6 +26,6 @@
     max-width: 800px;
     margin-bottom: 10px;
     color: black;
-    font-size: 45px;
+    font-size: 40px;
     font-weight: 400;
 }
