--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,7 @@
 
 .contact-title {
     color: black;
-    font-size: 60px;
+    font-size: 47px;
 }
 
 .contact-title a:hover {
