--- a/css/projects.css
+++ b/css/projects.css
@@ -12,7 +12,7 @@
 }
 
 .projects-grid {
-    width: 75vw;
+    width: 70vw;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
