--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -31,6 +31,7 @@
     min-height: 250px;
     padding: 1.2em 2em;
     background-color: white;
+    text-align: center;
 }
 
 .quote-author {
@@ -39,7 +40,7 @@
 }
 
 .quote {
-    font-size: 2em;
+    font-size: 1.6em;
     margin-top: 10px;
 }
 
